# tanren

./: .gitignore  LICENSE  README.md  pyproject.toml
tanren/: cli.py  config.py  github.py
tanren/ai/: client.py
tanren/ai/providers/: __init__.py  base.py  claude.py  gemini.py
tanren/commands/: ask.py  budget.py  checkin.py  compact.py  config_cmd.py  goal.py  history.py  report.py  review.py  setup.py  skills.py
tanren/storage/: budget.py  db.py
