[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tanren"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "google-genai>=1.0.0",
]

[project.scripts]
tanren = "tanren.cli:app"

[tool.setuptools.packages.find]
include = ["tanren*"]
